# HypotAI

./: .envrc  .gitignore  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: release_template.md
.github/workflows/: box_checker.yml  checker_test.yml  codeql.yml  pull_request_template.md  unit-tests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
hypotai/: data.py  model_LR.py  plotting.py
hypotai/models/: convolutional.py  model_LR.py  model_PR.py
notebooks/: Convolutional_NeuralNetworks.ipynb  DecisionTrees.ipynb  DeepNeuralNetworks.ipynb  Encoder-Decoders.ipynb  Feedforward_NeuralNetworks.ipynb  HypotenusProject.ipynb  KNearestNeighbours.ipynb  LinearModels.ipynb  PolynomialRegression.ipynb  RandomForests.ipynb  SupportVectorRegression.ipynb
