[project]
name = "hypotai"
version = "0.1.0"
description = "This is a parody machine learning project to make our lives harder with AI"
authors = [
    {name = "Melih",email = "karamel.itu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
