[project]
name = "hypotai"
version = "0.1.0"
description = "This is a parody machine learning project to make our lives harder with AI"
authors = [
    {name = "Melih",email = "karamel.itu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=1.26,<2.2)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
